--- a/public/index.html
+++ b/public/index.html
@@ -255,6 +255,22 @@
     const restartCheckIntervals = {};
 
     let expandedSensorId = null;
+    const token = localStorage.getItem('token');
+
+function authFetch(url, options = {}) {
+  const token = localStorage.getItem('token');
+  if (!token) {
+    alert('로그인이 필요합니다.');
+    throw new Error('JWT 토큰이 없습니다.');
+  }
+
+  const headers = {
+    ...options.headers,
+    'Authorization': `Bearer ${token}`
+  };
+
+  return fetch(url, { ...options, headers });
+}
 
     // ------------- 초기화 -------------
     async function initialize() {
@@ -263,26 +279,28 @@
     }
 
     // ------------- 센서 목록 로딩 -------------
-    async function loadSensors() {
-      try {
-        const res = await fetch('http://localhost:8080/api/sensors');
-        if (!res.ok) throw new Error('서버 응답 오류');
+   async function loadSensors() {
+  try {
+    const res = await authFetch('http://localhost:8080/api/sensors');
 
-        const data = await res.json();
-        sensors.length = 0;
-        data.forEach(item => sensors.push({
-          deviceSerial: item.deviceSerial,
-          sensorId: item.sensorId,
-          sensorName: item.name,
-          value: item.value,
-          referenceValue: item.referenceValue,
-          timestamp: item.timestamp,
-        }));
-        renderSensorList();
-      } catch (err) {
-        console.error('센서 목록 로딩 실패:', err);
-      }
-    }
+    if (!res.ok) throw new Error('서버 응답 오류: ' + res.status);
+
+    const data = await res.json();
+    sensors.length = 0;
+    data.forEach(item => sensors.push({
+      deviceSerial: item.deviceSerial,
+      sensorId: item.sensorId,
+      sensorName: item.name,
+      value: item.value,
+      referenceValue: item.referenceValue,
+      timestamp: item.timestamp,
+    }));
+    renderSensorList();
+  } catch (err) {
+    console.error('센서 목록 로딩 실패:', err);
+    alert(err.message);
+  }
+}
 
     // ------------- 센서 리스트 렌더링 -------------
     function renderSensorList() {
@@ -391,7 +409,7 @@
 
       fetchIntervals[dragId] = setInterval(async () => {
   try {
-    const res = await fetch(`http://localhost:8080/api/sensors?sensorIds=${sensor.sensorId}`);
+    const res = await authFetch(`http://localhost:8080/api/sensors?sensorIds=${sensor.sensorId}`);
     if (!res.ok) throw new Error('데이터 요청 실패');
 
     const data = await res.json();
@@ -556,7 +574,7 @@
 
       fetchIntervals[dragId] = setInterval(async () => {
         try {
-          const res = await fetch(`http://localhost:8080/api/sensors?sensorIds=${sensor.sensorId}`);
+          const res = await authFetch(`http://localhost:8080/api/sensors?sensorIds=${sensor.sensorId}`);
           if (!res.ok) throw new Error('데이터 요청 실패');
 
           const data = await res.json();
@@ -636,7 +654,7 @@
 
 async function tryRestartSensorFetch(dragId, sensor) {
   try {
-    const res = await fetch(`http://localhost:8080/api/sensors?sensorIds=${sensor.sensorId}`);
+    const res = await authFetch(`http://localhost:8080/api/sensors?sensorIds=${sensor.sensorId}`);
     if (!res.ok) throw new Error('데이터 요청 실패');
 
     const data = await res.json();
@@ -667,7 +685,7 @@ async function tryRestartSensorFetch(dragId, sensor) {
 function restartSensorFetch(dragId, sensor) {
   fetchIntervals[dragId] = setInterval(async () => {
     try {
-      const res = await fetch(`http://localhost:8080/api/sensors?sensorIds=${sensor.sensorId}`);
+      const res = await authFetch(`http://localhost:8080/api/sensors?sensorIds=${sensor.sensorId}`);
       if (!res.ok) throw new Error('데이터 요청 실패');
 
       const data = await res.json();
