--- a/public/changePwLink.html
+++ b/public/changePwLink.html
@@ -108,7 +108,7 @@
 
                     if (data.status === 'success') {
                         alert('비밀번호가 성공적으로 변경되었습니다.');
-                        window.location.href = '/login.html';
+                        window.location.href = '/rocket-frontend/public/login.html';
                     } else {
                         alert(data.message || '비밀번호 변경에 실패했습니다.');
                     }
