--- a/public/findId.html
+++ b/public/findId.html
@@ -27,7 +27,7 @@
                                                 <label for="inputEmail">이메일</label>
                                             </div>
                                             <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
-                                                <a class="small" href="/login.html">로그인 페이지로 돌아가기</a>
+                                                <a class="small" href="/rocket-frontend/public/login.html">로그인 페이지로 돌아가기</a>
                                                 <button type="submit" class="btn btn-primary">보내기</button>
                                             </div>
                                         </form>
@@ -66,7 +66,6 @@
                     return;
                 }
 
-                // 사용자에게 처리 시간에 대한 경고 표시
                 alert('10초에서 20초 정도 걸릴 수 있습니다.');
 
                 try {
@@ -78,15 +77,13 @@
                         body: JSON.stringify({ email })
                     });
 
-                    if (!response.ok) {
-                        throw new Error('서버 오류: ' + response.status);
-                    }
-
                     const data = await response.json();
 
-                    if (data.success) {
+                    if (response.ok && data.status === 'success') {
                         alert('입력하신 이메일로 아이디가 전송되었습니다.');
-                        window.location.href = '/login.html';
+                        window.location.href = '/rocket-frontend/public/login.html';
+                    } else if (response.status === 404 && data.status === 'fail') {
+                        alert(data.message || '존재하지 않는 이메일입니다.');
                     } else {
                         alert(data.message || '아이디를 찾을 수 없습니다.');
                     }
@@ -96,6 +93,5 @@
                 }
             });
         </script>
-
     </body>
 </html>
