--- a/public/history.html
+++ b/public/history.html
@@ -40,7 +40,7 @@
 </head>
 <body class="sb-nav-fixed">
 <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
-    <a class="navbar-brand ps-3" href="/index.html">Start Bootstrap</a>
+    <a class="navbar-brand ps-3" href="/rocket-frontend/public/index.html">Start Bootstrap</a>
     <button class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i class="fas fa-bars"></i></button>
     <form class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
         <div class="input-group">
@@ -55,7 +55,7 @@
                 <li><a class="dropdown-item" href="#!">Settings</a></li>
                 <li><a class="dropdown-item" href="#!">Activity Log</a></li>
                 <li><hr class="dropdown-divider" /></li>
-                <li><a class="dropdown-item" href="#!">Logout</a></li>
+                <li><a class="dropdown-item" href="#!" onclick="logout()">로그아웃</a></li>
             </ul>
         </li>
     </ul>
@@ -66,7 +66,7 @@
             <div class="sb-sidenav-menu">
                 <div class="nav">
                     <div class="sb-sidenav-menu-heading">Core</div>
-                    <a class="nav-link" href="/index.html">
+                    <a class="nav-link" href="/rocket-frontend/public/index.html">
                         <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                         Dashboard
                     </a>
@@ -78,8 +78,8 @@
                     </a>
                     <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordion">
                         <nav class="sb-sidenav-menu-nested nav">
-                            <a class="nav-link" href="">Static Navigation</a>
-                            <a class="nav-link" href="">Light Sidenav</a>
+                            <a class="nav-link" href="/rocket-frontend/public/history.html">History</a>
+                            <a class="nav-link" href="/rocket-frontend/public/prediction.html">Prediction</a>
                         </nav>
                     </div>
                     <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages" aria-expanded="false" aria-controls="collapsePages">
@@ -90,43 +90,23 @@
                     <div class="collapse" id="collapsePages" aria-labelledby="headingTwo" data-bs-parent="#sidenavAccordion">
                         <nav class="sb-sidenav-menu-nested nav accordion" id="sidenavAccordionPages">
                             <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#pagesCollapseAuth" aria-expanded="false" aria-controls="pagesCollapseAuth">
-                                Authentication
+                                인증
                                 <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
                             </a>
                             <div class="collapse" id="pagesCollapseAuth" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordionPages">
                                 <nav class="sb-sidenav-menu-nested nav">
-                                    <a class="nav-link" href="/login.html">Login</a>
-                                    <a class="nav-link" href="/register.html">Register</a>
-                                    <a class="nav-link" href="/password.html">Forgot Password</a>
-                                </nav>
-                            </div>
-                            <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#pagesCollapseError" aria-expanded="false" aria-controls="pagesCollapseError">
-                                Error
-                                <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
-                            </a>
-                            <div class="collapse" id="pagesCollapseError" aria-labelledby="headingOne" data-bs-parent="#sidenavAccordionPages">
-                                <nav class="sb-sidenav-menu-nested nav">
-                                    <a class="nav-link" href="">401 Page</a>
-                                    <a class="nav-link" href="">404 Page</a>
-                                    <a class="nav-link" href="">500 Page</a>
+                                    <a class="nav-link" href="login.html">로그인</a>
+                                    <a class="nav-link" href="findId.html">아이디찾기</a>
+                                    <a class="nav-link" href="changePw.html">비밀번호 변경</a>
                                 </nav>
                             </div>
                         </nav>
                     </div>
-                    <div class="sb-sidenav-menu-heading">Addons</div>
-                    <a class="nav-link" href="/history.html">
-                        <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
-                        Charts
-                    </a>
-                    <a class="nav-link" href="">
-                        <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
-                        Tables
-                    </a>
                 </div>
             </div>
             <div class="sb-sidenav-footer">
                 <div class="small">Logged in as:</div>
-                Start Bootstrap
+                <span id="loggedInUser">User</span>
             </div>
         </nav>
     </div>
@@ -138,12 +118,6 @@
                     <li class="breadcrumb-item"><a href="/index.html">Dashboard</a></li>
                     <li class="breadcrumb-item active">Charts</li>
                 </ol>
-                <div class="card mb-4">
-                    <div class="card-body">
-                        Chart.js is a third party plugin that is used to generate the charts in this template. The charts below have been customized - for further customization options, please visit the official
-                        <a target="_blank" href="https://www.chartjs.org/docs/latest/">Chart.js documentation</a>.
-                    </div>
-                </div>
                 <div class="card mb-4">
                     <div class="container">
                         <aside>
@@ -182,7 +156,8 @@
         </footer>
     </div>
 </div>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+<script src="/src/js/scripts.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-annotation@1.1.0"></script>
 <script>
@@ -199,6 +174,30 @@
         initDateInputs();
         document.getElementById("loadChartBtn").addEventListener("click", onLoadChartClick);
     };
+
+    function logout() {
+    localStorage.removeItem('token');  // 또는 sessionStorage.removeItem('token');
+    window.location.href = '/rocket-frontend/public/login.html';
+  }
+
+function parseJwt(token) {
+    if (!token) return null;
+    const base64Payload = token.split('.')[1];
+    const payload = atob(base64Payload.replace(/-/g, '+').replace(/_/g, '/'));
+    return JSON.parse(payload);
+  }
+
+  // 페이지 로드시 실행
+  window.addEventListener('DOMContentLoaded', () => {
+    const token = localStorage.getItem('token');
+    if (token) {
+      const payload = parseJwt(token);
+      if (payload && payload.sub) {
+        document.getElementById('loggedInUser').textContent = payload.sub;
+      }
+    }
+  });
+
 
     // --- 유틸 함수 ---
 
@@ -225,6 +224,7 @@
         const token = localStorage.getItem('token');
         if (!token) {
             alert('로그인이 필요합니다.');
+            window.location.href = '/rocket-frontend/public/login.html';
             throw new Error('No JWT token found');
         }
         return {
@@ -234,22 +234,31 @@
     };
 
     const fetchSensors = () => {
-        fetch(`${API_BASE}/sensors`, {
-            headers: getAuthHeaders()
-        })
-        .then(res => {
-            if (!res.ok) throw new Error(`HTTP error: ${res.status}`);
-            return res.json();
-        })
-        .then(data => {
-            sensors = data;
-            fetchHistory(); // 센서 목록 받은 뒤 기본 히스토리 조회
-        })
-        .catch(err => {
-            console.error("Failed to fetch sensors:", err);
+    fetch(`${API_BASE}/sensors`, {
+        headers: getAuthHeaders()
+    })
+    .then(res => {
+        if (res.status === 403) {
+            alert("세션이 만료되었거나 로그인하지 않았습니다. 다시 로그인해주세요.");
+            localStorage.removeItem('token');
+            window.location.href = '/rocket-frontend/public/login.html';
+            throw new Error("Unauthorized");
+        }
+        if (!res.ok) throw new Error(`HTTP error: ${res.status}`);
+        return res.json();
+    })
+    .then(data => {
+        sensors = data;
+        fetchHistory(); // 센서 목록 받은 뒤 기본 히스토리 조회
+    })
+    .catch(err => {
+        console.error("Failed to fetch sensors:", err);
+        // 401인 경우는 이미 처리했으므로 중복 alert 피함
+        if (err.message !== "Unauthorized") {
             alert("센서 목록을 불러오는 데 실패했습니다.");
-        });
-    };
+        }
+    });
+};
 
     const buildHistoryRequest = (sensorIds, startISO, endISO, unit) => {
         const grouped = groupSensorIdsByUnit(sensorIds);
